# sanmokunarabe

./: CMakeLists.txt  README.md
Epsillon_greedy/include/: Computer_sanmokunarabe_epsillon.hpp  Greedy_epsillon.hpp  Hand_sanmokunarabe_epsillon.hpp  UCB1_epsillon.hpp  sanmokunarabe_epsillon.hpp
Epsillon_greedy/src/: Computer_sanmokunarabe_epsillon.cpp  Greedy_epsillon.cpp  Hand_sanmokunarabe_epsillon.cpp  UCB1_epsillon.cpp  main_epsillon.cpp  sanmokunarabe_epsillon.cpp
PatternMatch/src/: PatternMatch_main.cpp  PatternMatch_make_board.cpp
UCB1_algorithm/include/: .Hand.hpp.swp  Computer_sanmokunarabe.hpp  Hand_sanmokunarabe.hpp  UCB1_main.cpp  sanmokunarabe.hpp
UCB1_algorithm/src/: Computer_sanmokunarabe.cpp  Hand.cpp  Hand_sanmokunarabe.cpp  UCB1.cpp  main.cpp  sanmokunarabe.cpp
epsilon_greedy/include/: UCB1.hpp  sanmokunarabe.hpp
epsilon_greedy/src/: Computer_sanmokunarabe.cpp  Hand_sanmokunarabe.cpp  UCB1.cpp
src/: UCB1_main.cpp  main.cpp  make_board.cpp
